--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
+    "axios": "^1.6.8",
     "echarts": "^5.5.0",
     "element-plus": "^2.6.2",
-    "axios": "^1.6.8",
+    "normalize.css": "^8.0.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.6",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "vite": "^5.2.6",
     "vite-plugin-vue-devtools": "^7.0.20"
   }
 }
