--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,13 +5,10 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout 
         uses: actions/checkout@v4
@@ -26,7 +23,8 @@ jobs:
           npm ci
           npm run build
 
-      - name: Deploy 
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          folder: dist 
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
